# pkgremedy

./: README.md
pkgremedy-unpacked/: CHANGELOG.md  github-actions.yml
pkgremedy-unpacked/pkgremedy/: .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  install.sh  pkgremedy-run.sh  pkgremedy.py  pkgremedy.sh  pyproject.toml
pkgremedy-unpacked/pkgremedy/ci/: Jenkinsfile.snippet  README.md
pkgremedy-unpacked/pkgremedy/examples/: environment.yml
