[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pkgremedy"
version = "0.1.0"
description = "Resolve known vulnerabilities in pip and conda environments by changing versions, with dry-run verification."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Platform / ML Infrastructure" }]
keywords = ["security", "vulnerabilities", "conda", "pip", "cve", "pip-audit"]

# The CLI shells out to these; installing them alongside makes `pipx install`
# self-sufficient for the native (--python) scanning path and for envfix YAML.
dependencies = [
  "pip-audit>=2.6",
  "pipdeptree>=2.13",
  "ruamel.yaml>=0.17",
  "filelock>=3.12",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
pkgremedy = "pkgremedy:main"

[project.urls]
Documentation = "https://example.internal/pkgremedy"

[tool.setuptools]
py-modules = ["pkgremedy"]
